--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="center">
             <div class="box1">Create the list that you want!</div>
             <form class="form1">
-                <input type="text" placeholder="Enter the list" name="text" class="int0">
+                <input type="text" required placeholder="Enter the list" name="text" class="int0">
                 <button class="btn btn0">Add +</button>
             </form>
             <ol class="result"></ol>
@@ -20,8 +20,8 @@
         <div class="center bottom">
             <div class="box1">X to the power of Y</div>
             <form class="form2">
-                <input type="number" placeholder="The digit" class="int int1">
-                <input type="number" placeholder="The power of digit" class="int int2">
+                <input type="number" required placeholder="The digit" class="int int1">
+                <input type="number" required placeholder="The power of digit" class="int int2">
                 <button class="btn">Calculate</button>
             </form>
             <div class="result1"></div>
